# tubejuice

./: .dockerignore  .gitignore  Dockerfile  README.md  beets_config.yaml.template  build-and-push.sh  docker-compose.yml  jobs.json  pyproject.toml
tubejuice/: __init__.py  index.html  main.py
