[project]
name = "tubejuice"
version = "0.1.0"
description = "YouTube Music album downloader with auto-tagging"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "yt-dlp>=2024.12.0",
    "beets>=2.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "requests>=2.32.0",
    "mutagen>=1.47.0",
]

[project.scripts]
tubejuice = "tubejuice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tubejuice"]
